--- a/packages/webview_flutter/webview_flutter_android/android/build.gradle
+++ b/packages/webview_flutter/webview_flutter_android/android/build.gradle
@@ -5,6 +5,7 @@ buildscript {
     repositories {
         google()
         mavenCentral()
+        maven { url 'https://jitpack.io' }
     }
 
     dependencies {
@@ -16,6 +17,7 @@ rootProject.allprojects {
     repositories {
         google()
         mavenCentral()
+        maven { url 'https://jitpack.io' }
     }
 }
 
@@ -40,11 +42,12 @@ android {
     }
 
     dependencies {
-        implementation 'androidx.annotation:annotation:1.5.0'
-        implementation 'androidx.webkit:webkit:1.6.1'
+        implementation 'androidx.annotation:annotation:1.7.0'
         testImplementation 'junit:junit:4.13.2'
         testImplementation 'org.mockito:mockito-inline:5.1.0'
         testImplementation 'androidx.test:core:1.3.0'
+        api 'com.tencent.tbs:tbssdk:44286'
+        implementation 'com.github.getActivity:XXPermissions:18.5'
     }
 
     compileOptions {
