--- a/packages/webview_flutter/webview_flutter_android/example/pubspec.yaml
+++ b/packages/webview_flutter/webview_flutter_android/example/pubspec.yaml
@@ -1,6 +1,6 @@
 name: webview_flutter_android_example
 description: Demonstrates how to use the webview_flutter_android plugin.
-publish_to: none
+version: 1.0.2+3
 
 environment:
   sdk: ">=2.18.0 <4.0.0"
